--- a/demo/client/index.html
+++ b/demo/client/index.html
@@ -4,23 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>WebRTC Stats Console Demo</title>
 </head>
 <body>
-  <script>
-    const ws = new WebSocket('ws://localhost:10404/ws');
-    ws.onmessage = (event) => {
-      console.log('ws onmessage', event);
-      if (event.data === 'close') {
-        ws.close();
-      }
-    };
-    ws.onopen = () => {
-      ws.send('first message');
-    };
-    ws.onerror = (error) => {
-      console.error(error)
-    };
-  </script>
+  <script src="./index.js"></script>
 </body>
 </html>
